Fix black line on carousel on mobile

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3051,11 +3051,6 @@ body .widget.business_insights_popular_post_widget ul li {
         opacity: 0;
     }
 }
-@media only screen and (max-width: 767px) and (max-width: 481px) {
-    .slide-bg {
-        height: 340px;
-    }
-}
 @media only screen and (max-width: 480px) {
     .slide-text h2 {
         font-size: 24px;
